--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,14 +10,14 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" routerLink="/login">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" routerLink="/register">Signup</a>
           </li>
         </ul>
         <span class="navbar-text">
-            <a class="nav-link" routerLink="sign-up">Signup</a>
+            <a class="nav-link" routerLink="/register">Signup</a>
         </span>
       </div>
     </div>
